# plcpick

./: CLAUDE.md  Cargo.toml  README.md  build.rs
cuda/: encoding.cuh  hmac_drbg.cuh  kernel.cu  pattern.cuh  secp256k1.cuh  sha256.cuh
docs/plans/: 2026-02-18-gpu-acceleration-design.md  2026-02-18-vulkan-backend-design.md  2026-02-18-vulkan-backend-plan.md  2026-02-18-vulkan-perf-optimization-design.md  2026-02-18-vulkan-perf-optimization-plan.md  2026-02-18-wgpu-migration-design.md  2026-02-18-wgpu-migration-plan.md
src/: main.rs  output.rs  pattern.rs  plc.rs
src/mining/: cpu.rs  cuda.rs  mod.rs  vulkan.rs  wgpu_backend.rs
vulkan/: encoding.glsl  hmac_drbg.glsl  init_g_table.comp  mine.comp  pattern.glsl  secp256k1.glsl  sha256.glsl  stride_g.comp  test_ecdsa_sign.comp  test_encoding.comp  test_field_mul.comp  test_field_sqr.comp  test_pattern.comp  test_point_double_g.comp  test_scalar_inv.comp  test_scalar_mul.comp  test_scalar_mul_G.comp  test_sha256.comp
wgpu/shaders/: curve.wgsl  ec_pass.wgsl  encoding.wgsl  field.wgsl  hash_pass.wgsl  hmac_drbg.wgsl  mine_pass.wgsl  pattern.wgsl  scalar.wgsl  sha256.wgsl
