[package]
name = "plcpick"
version = "0.1.0"
edition = "2024"

[features]
cuda = ["dep:cudarc"]

[dependencies]
base64 = "0.22"
bs58 = "0.5"
clap = { version = "4", features = ["derive"] }
console = "0.15"
cudarc = { version = "0.19.2", optional = true, features = ["cuda-version-from-build-system", "nvrtc"] }
data-encoding = "2"
indicatif = "0.17"
k256 = { version = "0.13", features = ["ecdsa"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_ipld_dagcbor = "0.6"
serde_json = "1"
sha2 = "0.10"
signature = "2"
ureq = "2"

[dev-dependencies]
num-bigint = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
